api client generated for item feature
