# src/api-gen/models/itemController/ApiItemDownloadItemExcelPost.ts
@@ -1,0 +1,7 @@
+import type { ResTfulResultIActionResult } from "../ResTfulResultIActionResult"
+
+/**
+ * @description Success
+ */
+export type ApiItemDownloadItemExcelPostMutationResponse =
+   ResTfulResultIActionResult
