# src/api-gen/models/itemController/ApiItemDownloadItemPdfUseridPost.ts
@@ -1,0 +1,14 @@
+import type { ResTfulResultIActionResult } from "../ResTfulResultIActionResult"
+
+export type ApiItemDownloadItemPdfUseridPostPathParams = {
+   /**
+    * @type integer int64
+    */
+   userid: number
+}
+
+/**
+ * @description Success
+ */
+export type ApiItemDownloadItemPdfUseridPostMutationResponse =
+   ResTfulResultIActionResult
