# src/api-gen/models/itemController/ApiItemItemBatchIdPut.ts
@@ -1,0 +1,12 @@
+import type { UpdateItemBatchDto } from "../UpdateItemBatchDto"
+
+export type ApiItemItemBatchIdPutMutationResponse = any | null
+
+export type ApiItemItemBatchIdPutPathParams = {
+   /**
+    * @type integer int64
+    */
+   id: number
+}
+
+export type ApiItemItemBatchIdPutMutationRequest = UpdateItemBatchDto
