# src/api-gen/models/itemController/ApiItemItemBatchesGet.ts
@@ -1,0 +1,34 @@
+import type { ResTfulResultPaginatedResponseItemBatchSimpleDto } from "../ResTfulResultPaginatedResponseItemBatchSimpleDto"
+
+export type ApiItemItemBatchesGetQueryParams = {
+   /**
+    * @type integer | undefined int32
+    */
+   PageNumber?: number
+   /**
+    * @type integer | undefined int32
+    */
+   PageSize?: number
+   /**
+    * @type string | undefined
+    */
+   ColumnName?: string
+   /**
+    * @type string | undefined
+    */
+   ColumnValue?: string
+   /**
+    * @type string | undefined
+    */
+   OrderBy?: string
+   /**
+    * @type string | undefined
+    */
+   OrderDirection?: string
+}
+
+/**
+ * @description Success
+ */
+export type ApiItemItemBatchesGetQueryResponse =
+   ResTfulResultPaginatedResponseItemBatchSimpleDto
